# centerpoint-livox

./: README.md  pre_pcd.ipynb
src/centerpoint-livox/: CMakeLists.txt
src/centerpoint-livox/cfgs/: Untitled-1.ipynb  centerpoint.yaml  centerpoint_boolmap_0.2.yaml
src/centerpoint-livox/include/: common.h  postprocess.h
src/centerpoint-livox/include/app/: detection.h
src/centerpoint-livox/model/: modified_infered_test_sim.onnx.cache
src/centerpoint-livox/src/: postprocess.cu
src/centerpoint-livox/src/app/: detection.cpp
src/pcl_reg/: CMakeLists.txt  package.xml
src/pcl_reg/src/: reg_pcl.cpp
src/ws_msgs/: CMakeLists.txt
